--- a/projet_maths.ipynb
+++ b/projet_maths.ipynb
@@ -86,11 +86,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x_i \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + G$$ avec $\\frac{1}{\\tau}$ et G étant des constantes donc ne dépendent que de t cela est possible car les $s_i$ sont bornées.\n",
+    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + \\frac{G}{\\tau}$$ avec $\\frac{1}{\\tau}$ et G étant des constantes donc ne dépendent que de t, cela est possible car les $s_i$ sont bornées.\n",
     "\n",
     "Soit $x(t)$ la solution on pose $g(t)=s(x(t),t)$ alors $g$ peut être bornée par une matrice colonne notée $G$ constante du temps qui est composée des bornes de $s_i$ notées $G_i$. $x$ est solution de $\\tau \\dot x = -x + g(t)$, soit pour chaque $x_i$ : $\\tau \\dot x_i = -x_i + g_i(t)$. on a donc pour chaque $x_i$ $$ \\frac {-x_i - G_i}{\\tau} \\leq \\dot x_i \\leq \\frac {-x_i + G_i}{\\tau}$$ \n",
     "d'où : $$ C_2 e^{\\frac{-t}{\\tau}} - G_i \\leq x_i(t) \\leq C_1 e^{\\frac{-t}{\\tau}} + G_i$$avec $C_1$ et $C_2$ des constantes\n",
-    "Donc tous les $x_i$ sont bornés pour $t>=0$, d'où $x$ est bornée.\n",
+    "Donc tous les $x_i$ sont bornés pour $0 \\leq t$, d'où $x$ est bornée.\n",
     "De plus $\\lim\\limits_{t \\to 0} e^{\\frac{-t}{\\tau}} = 0$ donc asymtotiquement $x_i$ est bornée par $G_i$ "
    ]
   },
@@ -368,7 +368,7 @@
     "- $(x_{1},x_{2})= (0.7,1.0)$ point d'équilibre instable \n",
     "- $(x_{1},x_{2})= (0.98,1.0)$ point d'équilibre stable\n",
     "  \n",
-    "Si la solution est initialisé sur le point d'équilibre instable alors elle y reste sinon la solution converge vers l'un des deux point d'équilibre stable."
+    "Si la solution est initialisé sur le point d'équilibre instable alors elle y reste, sinon la solution converge vers l'un des deux points d'équilibre stable."
    ]
   },
   {
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse 5** : L'ordre de convergence est le plus petit $c_v$ tel que : $$ \\max \\limits_{1 \\leq j \\leq J} \\Vert x^{\\rm j}_{explicite} - x^{\\rm j}_{euler}\\Vert \\leq c_v (dt)^p $$ \n",
+    "**Réponse 5** : L'ordre de convergence est le plus grand p tel que : $$ \\max \\limits_{1 \\leq j \\leq J} \\Vert x^{\\rm j}_{explicite} - x^{\\rm j}_{euler}\\Vert \\leq c_v (dt)^p $$ \n",
     "Pour trouver l'ordre de convergence de ce schéma, il faut utiliser une fonction explicite (dont on connait les valeurs exactes) régie par une équation différentielle. On fait fonctionner notre algorithme d'Euler avec cette équation différentielle et les mêmes points de départ pour le plus de pas dt possibles. On calcule ensuite l'erreur maximale pour chaque dt : la différence maximale entre les points de la solution exacte et ceux donnés par l'algorithme. Puis on trace le logarithme de l'erreur en fonction de dt. On effectue une regression linéaire et la pente obtenue donne p."
    ]
   },
@@ -651,7 +651,7 @@
    "metadata": {},
    "source": [
     "**Réponse 7** : \n",
-    "On observe un cycle d'hystérésis pour $x_1$ et $x_2$, ce qui correspond à ce qu'on peut déduire en utilisant ``plot_zeros_locus``. En effet la fonction ``plot_zero_locus`` permet de déterminer 2 points d'équilibres stable séparés par un point d'équilibre instable pour $d^{\\rm ext}_1$ entre 5.5 et 7.5 . La solution $x$ va donc pouvoir être attirée pour une même valeur de $d^{\\rm ext}_1$ vers l'un ou l'autre des points d'équilibre stable, mais comme ils sont stables $x$ va rester sur le point d'équilibre où elle se trouve avec la variation de $d^{\\rm ext}$ jusqu'a ce que ce point n'existe plus, à savoir au delà de $d^{\\rm ext}_1$=7.5 pour $d^{\\rm ext}_1$ croissant et en dessous de $d^{\\rm ext}_1$=5.5 pour $d^{\\rm ext}_1$ décroissant. C'est bien ce que l'on observe sur les graphes des trajectoires de $x_1$ et $x_2$.  \n",
+    "On observe un cycle d'hystérésis pour $x_1$ et $x_2$, ce qui correspond à ce qu'on peut déduire en utilisant ``plot_zeros_locus``. En effet la fonction ``plot_zero_locus`` permet de déterminer 2 points d'équilibre stable séparés par un point d'équilibre instable pour $d^{\\rm ext}_1$ entre 5.5 et 7.5 . La solution $x$ va donc pouvoir être attirée pour une même valeur de $d^{\\rm ext}_1$ vers l'un ou l'autre des points d'équilibre stable, mais comme ils sont stables $x$ va rester sur le point d'équilibre où elle se trouve avec la variation de $d^{\\rm ext}$ jusqu'a ce que ce point n'existe plus, à savoir au delà de $d^{\\rm ext}_1$=7.5 pour $d^{\\rm ext}_1$ croissant et en dessous de $d^{\\rm ext}_1$=5.5 pour $d^{\\rm ext}_1$ décroissant. C'est bien ce que l'on observe sur les graphes des trajectoires de $x_1$ et $x_2$.  \n",
     "L'hystérésis peut être utilisé comme une mémoire courte parce que pour une même valeur de $d^{\\rm ext}_1$, $x_1$ peut avoir 2 valeurs différentes dépendant de ce qu'il y avait avant en mémoire (l'ancienne valeur de $d^{\\rm ext}_1$ ou l'ancienne valeur de x par exemple)."
    ]
   },
@@ -669,9 +669,9 @@
     "**Question 8** Justifier que l'on recherche alors une valeur de $d_{\\rm ext}$ pour laquelle le système admet un seul point d'équilibre et pour laquelle ce point est instable. \n",
     "\n",
     "**Réponse 8** : Selon le théorème énoncé ci-dessus, on cherche une valeur de $d_{\\rm ext}$ pour laquelle le système ne converge pas vers un point (donc ne possède pas de points d'équilibre attractif) afin de pouvoir observer le cycle limite.  \n",
-    "Or on a plus de chance de trouver un pont d'équilibre non attractif parmis les point d'équilibre instable car le moyen utilisé pour justifier la stabilité d'un point est le théorème du lien entre stabilité et stabilité du linéarisé tangent qui donne directement la stabilité asymptotique et donc l'attractivité.  \n",
+    "Or on a plus de chance de trouver un pont d'équilibre non attractif parmis les points d'équilibre instable car le moyen utilisé pour justifier la stabilité d'un point est le théorème du lien entre stabilité et stabilité du linéarisé tangent qui donne directement la stabilité asymptotique et donc l'attractivité.  \n",
     "De plus il vaut mieux chercher une valeur de $d_{\\rm ext}$ avec un seul point d'équlibre car on a donc d'autant plus de chance qu'il n'y ait pas de point d'équlibre attractif.  \n",
-    "Mais cette condition de point d'unique point d'équilibre et instable n'est ni nécéssaire ni suffisante. En effet on pourrait avoir un point d'équilibre instable mais attractif on aurait alors convergence de la solution maximale vers ce point. On pourrait également avoir plusieurs point d'équilibre stable mais non attractifs, on aurait alors un cycle limite.  \n",
+    "Mais cette condition de point d'unique point d'équilibre et instable n'est ni nécéssaire ni suffisante. En effet on pourrait avoir un point d'équilibre instable mais attractif on aurait alors convergence de la solution maximale vers ce point. On pourrait également avoir plusieurs points d'équilibre stable mais non attractifs, on aurait alors un cycle limite.  \n",
     "On a vu Q3 qu'en modifiant la valeur de  $d_{\\rm ext}$ que les courbes de $ \\dot x_1 = 0$ et $ \\dot x_1 = 0$ dans le plan ($x_1$, $x_2$) sont simplement translatées l'une part rapport à l'autre.  \n",
     "Il est donc inévitable que les 2 courbes se croisent et donc inévitable d'avoir au moins un point d'équilibre. Mais, selon les allures des courbes, on peut trouver une valeur de $d_{\\rm ext}$ qui fasse en sorte qu'il n'y ait qu'un seul point d'équilibre instable. \n"
    ]
@@ -746,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si on a une jacobienne qui, en les points d'équilibre, a un déterminant <= 0 ou une trace positive, alors d'après le théorème du cours ces points d'équilibre sont instable. On veut donc que les courbes verte et rouge se croisent dans la zone violette (là où la jacobienne vérifie ces conditions). C'est le cas pour $d_{\\rm ext}$ = (4.0, 1.0). On doit donc pouvoir observer un cycle limite pour cette valeur de $d_{\\rm ext}$ grâce au programme suivant :"
+    "Si on a une jacobienne qui, en les points d'équilibre, a un déterminant $\\leq$ 0 ou une trace positive, alors d'après le théorème du cours ces points d'équilibre sont instables. On veut donc que les courbes verte et rouge se croisent dans la zone violette (là où la jacobienne vérifie ces conditions). C'est le cas pour $d_{\\rm ext}$ = (4.0, 1.0). On doit donc pouvoir observer un cycle limite pour cette valeur de $d_{\\rm ext}$ grâce au programme suivant :"
    ]
   },
   {
