--- a/projet_maths.ipynb
+++ b/projet_maths.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + \\frac{G}{\\tau}$$ avec $\\frac{1}{\\tau}$ et G étant des constantes donc ne dépendent que de t, cela est possible car les $s_i$ sont bornées.\n",
+    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + \\frac{||G||}{\\tau}$$ avec $\\frac{1}{\\tau}$ et G étant des constantes donc ne dépendent que de t, cela est possible car les $s_i$ sont bornées.\n",
     "\n",
     "Soit $x(t)$ la solution on pose $g(t)=s(x(t),t)$ alors $g$ peut être bornée par une matrice colonne notée $G$ constante du temps qui est composée des bornes de $s_i$ notées $G_i$. $x$ est solution de $\\tau \\dot x = -x + g(t)$, soit pour chaque $x_i$ : $\\tau \\dot x_i = -x_i + g_i(t)$. on a donc pour chaque $x_i$ $$ \\frac {-x_i - G_i}{\\tau} \\leq \\dot x_i \\leq \\frac {-x_i + G_i}{\\tau}$$ \n",
     "d'où : $$ C_2 e^{\\frac{-t}{\\tau}} - G_i \\leq x_i(t) \\leq C_1 e^{\\frac{-t}{\\tau}} + G_i$$avec $C_1$ et $C_2$ des constantes\n",
