--- a/projet_maths.ipynb
+++ b/projet_maths.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + \\frac{||G||}{\\tau}$$ avec $\\frac{1}{\\tau}$ et G étant des constantes donc ne dépendent que de t, cela est possible car les $s_i$ sont bornées.\n",
+    "**Réponse 1** : Le théorème d'existance globale garantit que les solutions maximales sont définies sur $\\mathbb{R}$ car $$\\Vert \\dot x \\Vert \\leq \\frac{1}{\\tau} \\Vert x \\Vert + \\frac{ \\Vert G \\Vert }{\\tau}$$ avec $\\frac{1}{\\tau}$ et $ \\Vert G \\Vert $ étant des constantes donc ne dépendent que de t, cela est possible car les $s_i$ sont bornées.\n",
     "\n",
     "Soit $x(t)$ la solution on pose $g(t)=s(x(t),t)$ alors $g$ peut être bornée par une matrice colonne notée $G$ constante du temps qui est composée des bornes de $s_i$ notées $G_i$. $x$ est solution de $\\tau \\dot x = -x + g(t)$, soit pour chaque $x_i$ : $\\tau \\dot x_i = -x_i + g_i(t)$. on a donc pour chaque $x_i$ $$ \\frac {-x_i - G_i}{\\tau} \\leq \\dot x_i \\leq \\frac {-x_i + G_i}{\\tau}$$ \n",
     "d'où : $$ C_2 e^{\\frac{-t}{\\tau}} - G_i \\leq x_i(t) \\leq C_1 e^{\\frac{-t}{\\tau}} + G_i$$avec $C_1$ et $C_2$ des constantes\n",
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les parties réelles des valeurs propres de la jacobienne sont bien strictements négatives donc le point (0, 0) est un point d'équilibre stable."
+    "Les parties réelles des valeurs propres de la jacobienne sont bien strictements négatives donc le point (0, 0) est un point d'équilibre asymptotiquement stable d'après le théoreme du cours."
    ]
   },
   {
@@ -652,7 +652,9 @@
    "source": [
     "**Réponse 7** : \n",
     "On observe un cycle d'hystérésis pour $x_1$ et $x_2$, ce qui correspond à ce qu'on peut déduire en utilisant ``plot_zeros_locus``. En effet la fonction ``plot_zero_locus`` permet de déterminer 2 points d'équilibre stable séparés par un point d'équilibre instable pour $d^{\\rm ext}_1$ entre 5.5 et 7.5 . La solution $x$ va donc pouvoir être attirée pour une même valeur de $d^{\\rm ext}_1$ vers l'un ou l'autre des points d'équilibre stable, mais comme ils sont stables $x$ va rester sur le point d'équilibre où elle se trouve avec la variation de $d^{\\rm ext}$ jusqu'a ce que ce point n'existe plus, à savoir au delà de $d^{\\rm ext}_1$=7.5 pour $d^{\\rm ext}_1$ croissant et en dessous de $d^{\\rm ext}_1$=5.5 pour $d^{\\rm ext}_1$ décroissant. C'est bien ce que l'on observe sur les graphes des trajectoires de $x_1$ et $x_2$.  \n",
-    "L'hystérésis peut être utilisé comme une mémoire courte parce que pour une même valeur de $d^{\\rm ext}_1$, $x_1$ peut avoir 2 valeurs différentes dépendant de ce qu'il y avait avant en mémoire (l'ancienne valeur de $d^{\\rm ext}_1$ ou l'ancienne valeur de x par exemple)."
+    "L'hystérésis peut être utilisé comme une mémoire courte parce que pour une même valeur de $d^{\\rm ext}_1$, $x_1$ peut avoir 2 valeurs différentes dépendant de ce qu'il y avait avant en mémoire (l'ancienne valeur de $d^{\\rm ext}_1$ ou l'ancienne valeur de x par exemple).  \n",
+    "\n",
+    "NB: la remontée de $x_2$ vers 1 quand $d^{\\rm ext}_1$ décroit vers 4 est sûrement une erreur due aux imprecisions de la méthode d'Euler."
    ]
   },
   {
@@ -746,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si on a une jacobienne qui, en les points d'équilibre, a un déterminant $\\leq$ 0 ou une trace positive, alors d'après le théorème du cours ces points d'équilibre sont instables. On veut donc que les courbes verte et rouge se croisent dans la zone violette (là où la jacobienne vérifie ces conditions). C'est le cas pour $d_{\\rm ext}$ = (4.0, 1.0). On doit donc pouvoir observer un cycle limite pour cette valeur de $d_{\\rm ext}$ grâce au programme suivant :"
+    "Si on a une jacobienne qui, en les points d'équilibre, a un déterminant $\\leq$ 0 ou une trace positive donc comme on est en dimension 2, la Jacobienne possède au moins une valeur propre avec une partie réelle positive, donc d'après le théorème du cours ces points d'équilibre sont instables. On veut donc que les courbes verte et rouge se croisent dans la zone violette (là où la jacobienne vérifie ces conditions). C'est le cas pour $d_{\\rm ext}$ = (4.0, 1.0). On doit donc pouvoir observer un cycle limite pour cette valeur de $d_{\\rm ext}$ grâce au programme suivant :"
    ]
   },
   {
@@ -794,7 +796,7 @@
     "plt.show()\n",
     "plt.figure()\n",
     "plt.plot(x[:,0],x[:,1], color=\"blue\")\n",
-    "plt.title(\"portrait de phase pour dext = (4.0, 1.0) et x0 = (\" + str(x0[0]) + \", \" + str(x0[1]) + \")\")\n",
+    "plt.title(\"simulation du cycle limite pour dext = (4.0, 1.0) et x0 = (\" + str(x0[0]) + \", \" + str(x0[1]) + \")\")\n",
     "plt.xlabel(\"x1\")\n",
     "plt.ylabel(\"x2\")\n",
     "plt.show()"
