--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -240,6 +240,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Réponse 4** : L'union de 2 variables indépendantes suivants des lois de Poisson de paramètres respectifs $\\theta_1$ et $\\theta_2$ est la somme de ces 2 variables. Or la somme de 2 lois de Poisson indépendantes $X_1$ et $X_2$ est égale à une loi de Poisson Z de paramètre égal à la somme des paramètres précedents. *Si c'est pas clair, hésite pas à reformuler*\n",
+    "\n",
+    "En effet : \n",
+    "$Z = X_1 + X_2$\n",
+    "Donc sous forme d'évenements : $(Z = n) = \\cup_{k = 0}^{n} (X_1 = k, X_2 = n-k)$\n",
+    "$X_1$ et $X_2$ étant indépendantes, on a :\n",
+    "$$ \\mathbb{P}(Z = n) = \\sum_{k=0}^{n} \\mathbb{P}(X_1 = k) \\mathbb{P}(X_2 = n-k)$$\n",
+    "$$ = \\sum_{k=0}^{n} \\frac{e^{-\\theta_1} \\theta_1^{k}}{k!} \\frac{e^{-\\theta_2} \\theta_2^{n-k}}{(n-k)!}$$\n",
+    "$$ = \\frac{e^{-\\theta_1}e^{-\\theta_2}}{n!} \\sum_{k=0}^{n} \\frac{\\theta_1^{k}}{k!} \\frac{\\theta_2^{n-k}}{(n-k)!} n!$$\n",
+    "$$ = \\frac{e^{-(\\theta_1+\\theta_2)}}{n!} \\sum_{k=0}^{n} \\binom{n}{k} \\theta_1^{k}  \\theta_2^{n-k}$$\n",
+    "$$ = \\frac{e^{-(\\theta_1+\\theta_2)} (\\theta_1+ \\theta_2)^{n}}{n!} $$\n",
+    "\n",
+    "\n",
+    "L'intégrale est linéaire donc si $\\theta = \\theta_1+\\theta_2$ alors on a bien $\\theta(A) = \\theta_1(A)+\\theta_2(A)$\n",
+    "\n",
+    "C'est donc bien un processus de Poisson d'intensité $\\theta = \\theta_1+\\theta_2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "On suppose que l'altitude (en mètres) du domaine d'étude $D=[0,100]\\times [0,100]$ peut être décrite par la fonction suivante : \n",
     "$$f(x) = 10^4 \\left(f_{(30,20),\\Sigma_1}(x) + f_{(80,45),\\Sigma_2}(x) + f_{(30,70),\\Sigma_3}(x)\\right), x\\in \\mathbb{R^2}$$\n",
     "\n",
