Partie 1: questions 2 et 3

--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -44,7 +44,8 @@
     "**Réponse 1.a** : $$\\mathbb{P}(N(A)= n, N(B)=p)$$\n",
     "$$=\\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A)= n, N(B)=p, N(A\\cap B)=k) $$\n",
     "$$= \\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A\\backslash B)= n-k, N(B)=p)$$ \n",
-    "$$= \\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A\\backslash B)= n-k)*\\mathbb{P}(N(B)= p)$$\n",
+    "$$= \\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A\\backslash B)= n-k)*\\mathbb{P}(N(B)= p)$$ \n",
+    "par indépendance des N(Ai) pour des Ai disjoints\n",
     "$$ = \\sum_{k=0}^{min(n,p)} e^{ \\bigl( - \\theta | A\\backslash B | \\bigr)} \\frac{\\bigl( \\theta | A\\backslash B | \\bigr)^{n-k} }{(n-k)!} *\\exp \\bigl( - \\theta | B | \\bigr) \\frac{\\bigl( \\theta | B | \\bigr)^{p} }{p!}$$\n",
     "\n",
     "b. *(facultatif)* Montrer que cette définition permet de caractériser la loi spatiale de la mesure de comptage du processus."
@@ -66,8 +67,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse 2** : Sachant $N(A)=n$, l'expérience revient à tirer n point dans A de manière indépendante avec la probabilité $\\frac{ | B | }{ | A |}$ d'être dans B, chaque point suit donc une loi de Bernoulli de paramètre $\\frac{ | B | }{ | A |}$ qui vaut 1 si le point est dans B et 0 sinon. La variable aléatoire $N(B)$ est donc la somme de ces n variables de Bernoulli donc suit une loi binomiale de paramètre (n,$\\frac{ | B | }{ | A |}$) d'où le résultat.\n",
-    "Pour tout sous-ensemble C de A on a une probabilité $\\frac{ | C | }{ | A |}$ d'être à l'intérieur de C d'où l'uniformité de la distribution. *Attention c'est faux : demander à Aurélie pour le faire dans l'autre sens*"
+    "**Réponse 2** : \n",
+    "D'après la formule de Bayes : \n",
+    "$$ \\mathbb{P}(N(B) = i | N(A) = n)= \\frac{\\mathbb{P}(N(A) = n | N(B) = i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$  \n",
+    "Or $\\mathbb{P}(N(A) = n | N(B) = i)= \\mathbb{P}(N(A\\backslash B) = n-i | N(B) = i)$ car B inclut dans A  \n",
+    "D'ou $\\mathbb{P}(N(A) = n | N(B) = i)=\\mathbb{P}(N(A\\backslash B) = n-i)$ par indépendance des évènements $N(A\\backslash B)$ et $N(B)$ car $A\\backslash B$ et $B$ sont disjoints  \n",
+    "Ainsi $\\mathbb{P}(N(A) = n | N(B) = i)=\\frac{\\mathbb{P}(N(A\\backslash B)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $ donc en remplaçant ces différentes probabilités par leur expression on trouve:  \n",
+    "$$ \\mathbb{P}(N(B) = i | N(A) = n)={ n \\choose i } \\left( \\frac{ | B | }{ | A | } \\right)^i \n",
+    "\\, \\left( 1 - \\frac{ | B | }{ | A | } \\right)^{n - i}$$ \n",
+    "car $|A\\backslash B|=|A|-|B|$  \n",
+    "\n",
+    "On remarque que conditionnellement à $N(A)=n$, $N(B)$ suit une loi binomiale de paramètres $(n,\\frac{|B|}{|A|})$ et cela pour tout B inclus dans A. Or une loi binomiale est assimilable à la somme de variables de Bernouilli indépendantes de même paramètre donc c'est comme si chacun des n points était distribués de manière indépendantes dans A selon un paramètre proportionnel à la taille de la sous-partie de A considérée donc uniformement dans A."
    ]
   },
   {
@@ -83,16 +93,27 @@
    "source": [
     "**Réponse 3** : \n",
     "- Si A et B sont disjoint par indépendance de N(A) et N(B) (par définition) alors $\\mathrm{Cov}(N(A),N(B)) = 0 =\\theta |A \\cap B|$.\n",
+    "\n",
     "- Sinon $N(A)= N(A\\backslash B) + N(A \\cap B)$   \n",
     "donc $\\mathrm{Cov}(N(A),N(B)) = \\mathrm{Cov}(N(A\\backslash B) ,N(B)) + \\mathrm{Cov}(N(A \\cap B), N(B))$   \n",
     "or $A\\backslash B$ et $B$ sont disjoints donc $\\mathrm{Cov}(N(A\\backslash B) ,N(B))=0$.  \n",
-    "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 2 car C est inclu dans B   \n",
+    "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 2 car C est inclus dans B   \n",
     "$\\mathrm{Cov}(N(C),N(B)) =\\mathbb{E}(N(C)N(B))-\\mathbb{E}(N(C))\\mathbb{E}(N(B))$  \n",
-    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérences vallent $\\theta \\, | C |$ et $\\theta \\, | B |$\n",
-    "De plus on calcule $\\mathbb{E}(N(C)N(B))$\n",
-    "$$\\mathbb{E}(N(C)N(B))=\\sum_{b=0}^{\\inf}\\mathbb{E}(N(C)N(B) | N(B)=b) =\\sum_{b=0}^{\\inf}b*\\mathbb{E}(N(C) | N(B)=b)$$\n",
-    "Or $(N(C) | N(B)=b)$ suit une loi binomiale de paramètre (b, $\\frac{ | C | }{ | B |}$) donc son espérance vaut $b * \\frac{ | C | }{ | B |}$  \n",
-    "On a donc "
+    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérences vallent $\\theta \\, | C |$ et $\\theta \\, | B |$  \n",
+    "Donc il nous reste à calculer $\\mathbb{E}(N(C)N(B))$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i, N(B) = n)$$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i| N(B) = n)\\mathbb{P}(N(B)=n)$$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}n\\mathbb{P}(N(B)=n)\\sum_{i=0}^{n}i{ n \\choose i } \\left( \\frac{ | C | }{ | B | } \\right)^i \n",
+    "\\, \\left( 1 - \\frac{ | C | }{ | B | } \\right)^{n - i}$$\n",
+    "car on s'est ramené au cas de la question 2, on reconnait pour la seconde somme l'espérance d'une loi de Binomiale de paramètre $(n,\\frac{ | C | }{ | B | })$ d'ou:\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\frac{ | C | }{ | B | }*\\sum_{n=0}^{\\inf}n^2\\exp \\bigl( - \\theta | B | \\bigr) \\frac{\n",
+    "        \\bigl( \\theta | B | \\bigr)^n }{n!}$$\n",
+    "On reconnait ici la variance + l'espérance au carrée d'une loi de Poisson de paramètre $\\theta \\, | B |$ qui vaut $\\theta \\, | B |+(\\theta \\, | B |)^2$ \n",
+    "Ainsi $\\mathbb{E}(N(C)N(B))=\\theta| C |(1+\\theta|B|)$ \n",
+    "D'où:\n",
+    "$$\\mathrm{Cov}(N(A),N(B))=\\theta| C |(1+\\theta|B|)-\\theta| C |\\theta| B |$$\n",
+    "$$=\\theta| C |$$\n",
+    "$$=\\theta| A\\cap B |$$"
    ]
   },
   {
