--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -72,7 +72,7 @@
     "$$ \\mathbb{P}(N(B) = i | N(A) = n)= \\frac{\\mathbb{P}(N(A) = n | N(B) = i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$  \n",
     "Or $\\mathbb{P}(N(A) = n | N(B) = i)= \\mathbb{P}(N(A\\backslash B) = n-i | N(B) = i)$ car B inclut dans A  \n",
     "D'ou $\\mathbb{P}(N(A) = n | N(B) = i)=\\mathbb{P}(N(A\\backslash B) = n-i)$ par indépendance des évènements $N(A\\backslash B)$ et $N(B)$ car $A\\backslash B$ et $B$ sont disjoints  \n",
-    "Ainsi $\\mathbb{P}(N(A) = n | N(B) = i)=\\frac{\\mathbb{P}(N(A\\backslash B)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $ donc en remplaçant ces différentes probabilités par leur expression on trouve:  \n",
+    "Ainsi $\\mathbb{P}(N(A) = n | N(B) = i)=\\frac{\\mathbb{P}(N(A\\backslash B)=n-i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $ donc en remplaçant ces différentes probabilités par leur expression on trouve:  \n",
     "$$ \\mathbb{P}(N(B) = i | N(A) = n)={ n \\choose i } \\left( \\frac{ | B | }{ | A | } \\right)^i \n",
     "\\, \\left( 1 - \\frac{ | B | }{ | A | } \\right)^{n - i}$$ \n",
     "car $|A\\backslash B|=|A|-|B|$  \n",
@@ -170,6 +170,7 @@
     "def poisson_simulation(theta, a, b):\n",
     "    S =   a*b\n",
     "    N =   np.random.poisson(theta * S)\n",
+    "    # on a prouvé question 2 que sachant N, les coordonnées des points sont indépendantes et uniformément distribuées\n",
     "    x =   [np.random.uniform([0, 100]) for i in range(N)]\n",
     "    y =   [np.random.uniform([0, 100]) for i in range(N)]\n",
     "    print(N)\n",
@@ -237,6 +238,14 @@
     "-> l'idée est ici de leur faire utiliser la même démarche qu'en homogène pour établir l'indépendance\n",
     "\n",
     "  </font> -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse 1** : On procède exactement comme dans la première partie pour calculer $\\mathbb{P}(N(B) = i | N(A) = n)$ avec B inclus dans A, la seule différence est que le paramètre $\\theta$ n'est pas le même pour A et B. Ainsi on a: \n",
+    "$$\n"
    ]
   },
   {
