--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -45,8 +45,13 @@
     "$$=\\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A)= n, N(B)=p, N(A\\cap B)=k) $$\n",
     "$$= \\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A\\backslash B)= n-k, N(B)=p)$$ \n",
     "$$= \\sum_{k=0}^{min(n,p)} \\mathbb{P}(N(A\\backslash B)= n-k)*\\mathbb{P}(N(B)= p)$$ \n",
-    "par indépendance des N(Ai) pour des Ai disjoints\n",
+    "par indépendance des N($A_i$) pour des $A_i$ disjoints\n",
     "$$ = \\sum_{k=0}^{min(n,p)} e^{ \\bigl( - \\theta | A\\backslash B | \\bigr)} \\frac{\\bigl( \\theta | A\\backslash B | \\bigr)^{n-k} }{(n-k)!} *\\exp \\bigl( - \\theta | B | \\bigr) \\frac{\\bigl( \\theta | B | \\bigr)^{p} }{p!}$$\n",
+    "\n",
+    "\n",
+    "***J'arrive pas trop à voir ce qu'on met dans la conclusion...***\n",
+    "\n",
+    "\n",
     "\n",
     "b. *(facultatif)* Montrer que cette définition permet de caractériser la loi spatiale de la mesure de comptage du processus."
    ]
@@ -71,7 +76,7 @@
     "D'après la formule de Bayes : \n",
     "$$ \\mathbb{P}(N(B) = i | N(A) = n)= \\frac{\\mathbb{P}(N(A) = n | N(B) = i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$  \n",
     "Or $\\mathbb{P}(N(A) = n | N(B) = i)= \\mathbb{P}(N(A\\backslash B) = n-i | N(B) = i)$ car B inclut dans A  \n",
-    "D'ou $\\mathbb{P}(N(A) = n | N(B) = i)=\\mathbb{P}(N(A\\backslash B) = n-i)$ par indépendance des évènements $N(A\\backslash B)$ et $N(B)$ car $A\\backslash B$ et $B$ sont disjoints  \n",
+    "D'où $\\mathbb{P}(N(A) = n | N(B) = i)=\\mathbb{P}(N(A\\backslash B) = n-i)$ par indépendance des évènements $N(A\\backslash B)$ et $N(B)$ car $A\\backslash B$ et $B$ sont disjoints  \n",
     "Ainsi $\\mathbb{P}(N(A) = n | N(B) = i)=\\frac{\\mathbb{P}(N(A\\backslash B)=n-i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $ donc en remplaçant ces différentes probabilités par leur expression on trouve:  \n",
     "$$ \\mathbb{P}(N(B) = i | N(A) = n)={ n \\choose i } \\left( \\frac{ | B | }{ | A | } \\right)^i \n",
     "\\, \\left( 1 - \\frac{ | B | }{ | A | } \\right)^{n - i}$$ \n",
@@ -134,7 +139,7 @@
     "import numpy as np\n",
     "rng = np.random.default_rng(seed=42)\n",
     "import matplotlib.pyplot as plt\n",
-    "#import scipy.stats as sps"
+    "import scipy.stats as sps"
    ]
   },
   {
