--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -250,10 +250,15 @@
    "metadata": {},
    "source": [
     "**Réponse 1** : On procède exactement comme dans la première partie pour calculer $\\mathbb{P}(N(B) = i | N(A) = n)$ avec B inclus dans A, la seule différence est que le paramètre $\\theta$ n'est pas le même pour A et B. Ainsi on a: \n",
-    "$$\\mathbb{P}(N(A) = n | N(B) = i)=\\frac{\\mathbb{P}(N(A\\backslash B)=n-i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$\n",
+    "$$\\mathbb{P}(N(B) = i | N(A) = n)=\\frac{\\mathbb{P}(N(A\\backslash B)=n-i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$\n",
     "$$=\\frac{\\exp \\bigl( - \\theta(A\\backslash B) | A\\backslash B | \\bigr) \\frac{\\bigl( \\theta(A\\backslash B) | A\\backslash B | \\bigr)^{n-i} }{(n-i)!}*\\exp \\bigl( - \\theta(B) | B | \\bigr) \\frac{\\bigl( \\theta(B) | B | \\bigr)^i }{i!}}{\\exp \\bigl( - \\theta(A) | A | \\bigr) \\frac{\\bigl( \\theta(A) | A | \\bigr)^n }{n!}}$$\n",
     "$$={n \\choose i}\\exp \\bigl(\\theta(A)|B|-\\theta(B)(|A|-2|B|))\\left( (1-f(B))(1-\\frac{ | B | }{ | A | }) \\right)^{n-i} \n",
-    "\\, \\left( f(B)\\frac{ | B | }{ | A | } \\right)^{i}\n"
+    "\\, \\left( f(B)\\frac{ | B | }{ | A | } \\right)^{i}$$\n",
+    "\n",
+    "On reconnaît une loi ???\n",
+    "\n",
+    "On peut donc calculer :\n",
+    "$$\\mathbb{P}(N(B) = 1 | N(A) = 1) = e^{\\theta(A)|B|-\\theta(B)(|A|-2|B|)} f(B)\\frac{ | B | }{ | A | }$$"
    ]
   },
   {
