--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -251,14 +251,14 @@
    "source": [
     "**Réponse 1** : On procède exactement comme dans la première partie pour calculer $\\mathbb{P}(N(B) = i | N(A) = n)$ avec B inclus dans A, la seule différence est que le paramètre $\\theta$ n'est pas le même pour A et B. Ainsi on a: \n",
     "$$\\mathbb{P}(N(B) = i | N(A) = n)=\\frac{\\mathbb{P}(N(A\\backslash B)=n-i)*\\mathbb{P}(N(B) = i)}{\\mathbb{P}(N(A) = n)} $$\n",
-    "$$=\\frac{\\exp \\bigl( - \\theta(A\\backslash B) | A\\backslash B | \\bigr) \\frac{\\bigl( \\theta(A\\backslash B) | A\\backslash B | \\bigr)^{n-i} }{(n-i)!}*\\exp \\bigl( - \\theta(B) | B | \\bigr) \\frac{\\bigl( \\theta(B) | B | \\bigr)^i }{i!}}{\\exp \\bigl( - \\theta(A) | A | \\bigr) \\frac{\\bigl( \\theta(A) | A | \\bigr)^n }{n!}}$$\n",
-    "$$={n \\choose i}\\exp \\bigl(\\theta(A)|B|-\\theta(B)(|A|-2|B|))\\left( (1-f(B))(1-\\frac{ | B | }{ | A | }) \\right)^{n-i} \n",
-    "\\, \\left( f(B)\\frac{ | B | }{ | A | } \\right)^{i}$$\n",
+    "$$=\\frac{\\exp \\bigl( - \\theta(A\\backslash B) \\bigr) \\frac{\\bigl( \\theta(A\\backslash B) \\bigr)^{n-i} }{(n-i)!}*\\exp \\bigl( - \\theta(B) \\bigr) \\frac{\\bigl( \\theta(B) \\bigr)^i }{i!}}{\\exp \\bigl( - \\theta(A) \\bigr) \\frac{\\bigl( \\theta(A) \\bigr)^n }{n!}}$$\n",
+    "$$={n \\choose i}\\left( 1-f(B) \\right)^{n-i} \\left( f(B) \\right)^{i}$$\n",
     "\n",
-    "On reconnaît une loi ???\n",
+    "On reconnaît encore une loi Binomiale de paramètres (n, f(B)), ce qui correspond encore à une somme de variables de Bernouilli indépendantes de même paramètre f(B) donc c'est comme si chacun des n points était distribués de manière indépendantes dans A selon une densité de probabilité f(B).\n",
     "\n",
     "On peut donc calculer :\n",
-    "$$\\mathbb{P}(N(B) = 1 | N(A) = 1) = e^{\\theta(A)|B|-\\theta(B)(|A|-2|B|)} f(B)\\frac{ | B | }{ | A | }$$"
+    "$$\\mathbb{P}(N(B) = 1 | N(A) = 1) = f(B)$$\n",
+    "La loi de probabilité d'implantation des points est donc la loi qui a une densité de probabilité f"
    ]
   },
   {
@@ -267,7 +267,30 @@
    "source": [
     "**Question 3.** Soient $A, B \\in \\cal{B}(\\mathbb{R}^2)$, montrer que $\\mathrm{Cov}(N(A),N(B)) = \\theta (A \\cap B)$.\n",
     "\n",
-    "***Where Q2 ????????***"
+    "\n",
+    "**Réponse 3** : \n",
+    "- Si A et B sont disjoint par indépendance de N(A) et N(B) (par définition) alors $\\mathrm{Cov}(N(A),N(B)) = 0 =\\theta (A \\cap B)$.\n",
+    "\n",
+    "- Sinon $N(A)= N(A\\backslash B) + N(A \\cap B)$   \n",
+    "donc $\\mathrm{Cov}(N(A),N(B)) = \\mathrm{Cov}(N(A\\backslash B) ,N(B)) + \\mathrm{Cov}(N(A \\cap B), N(B))$   \n",
+    "or $A\\backslash B$ et $B$ sont disjoints donc $\\mathrm{Cov}(N(A\\backslash B) ,N(B))=0$.  \n",
+    "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 2 car C est inclus dans B   \n",
+    "$\\mathrm{Cov}(N(C),N(B)) =\\mathbb{E}(N(C)N(B))-\\mathbb{E}(N(C))\\mathbb{E}(N(B))$  \n",
+    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérences vallent $\\theta \\, | C |$ et $\\theta \\, | B |$  \n",
+    "Donc il nous reste à calculer $\\mathbb{E}(N(C)N(B))$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i, N(B) = n)$$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i| N(B) = n)\\mathbb{P}(N(B)=n)$$\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}n\\mathbb{P}(N(B)=n)\\sum_{i=0}^{n}i{ n \\choose i } \\left( \\frac{ | C | }{ | B | } \\right)^i \n",
+    "\\, \\left( 1 - \\frac{ | C | }{ | B | } \\right)^{n - i}$$\n",
+    "car on s'est ramené au cas de la question 2, on reconnait pour la seconde somme l'espérance d'une loi de Binomiale de paramètre $(n,\\frac{ | C | }{ | B | })$ d'ou:\n",
+    "$$\\mathbb{E}(N(C)N(B))=\\frac{ | C | }{ | B | }*\\sum_{n=0}^{\\inf}n^2\\exp \\bigl( - \\theta | B | \\bigr) \\frac{\n",
+    "        \\bigl( \\theta | B | \\bigr)^n }{n!}$$\n",
+    "On reconnait ici la variance + l'espérance au carrée d'une loi de Poisson de paramètre $\\theta \\, | B |$ qui vaut $\\theta \\, | B |+(\\theta \\, | B |)^2$ \n",
+    "Ainsi $\\mathbb{E}(N(C)N(B))=\\theta| C |(1+\\theta|B|)$ \n",
+    "D'où:\n",
+    "$$\\mathrm{Cov}(N(A),N(B))=\\theta| C |(1+\\theta|B|)-\\theta| C |\\theta| B |$$\n",
+    "$$=\\theta| C |$$\n",
+    "$$=\\theta| A\\cap B |$$"
    ]
   },
   {
