--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -104,7 +104,7 @@
     "or $A\\backslash B$ et $B$ sont disjoints donc $\\mathrm{Cov}(N(A\\backslash B) ,N(B))=0$.  \n",
     "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 2 car C est inclus dans B   \n",
     "$\\mathrm{Cov}(N(C),N(B)) =\\mathbb{E}(N(C)N(B))-\\mathbb{E}(N(C))\\mathbb{E}(N(B))$  \n",
-    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérences vallent $\\theta \\, | C |$ et $\\theta \\, | B |$  \n",
+    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérances vallent $\\theta \\, | C |$ et $\\theta \\, | B |$  \n",
     "Donc il nous reste à calculer $\\mathbb{E}(N(C)N(B))$\n",
     "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i, N(B) = n)$$\n",
     "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i| N(B) = n)\\mathbb{P}(N(B)=n)$$\n",
@@ -274,23 +274,25 @@
     "- Sinon $N(A)= N(A\\backslash B) + N(A \\cap B)$   \n",
     "donc $\\mathrm{Cov}(N(A),N(B)) = \\mathrm{Cov}(N(A\\backslash B) ,N(B)) + \\mathrm{Cov}(N(A \\cap B), N(B))$   \n",
     "or $A\\backslash B$ et $B$ sont disjoints donc $\\mathrm{Cov}(N(A\\backslash B) ,N(B))=0$.  \n",
-    "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 2 car C est inclus dans B   \n",
+    "Ainsi il reste juste à calculer $\\mathrm{Cov}(N(A \\cap B), N(B))$ on pose $C=A \\cap B$, on se ramène à la question 1 car C est inclus dans B   \n",
     "$\\mathrm{Cov}(N(C),N(B)) =\\mathbb{E}(N(C)N(B))-\\mathbb{E}(N(C))\\mathbb{E}(N(B))$  \n",
-    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta \\, | C |$ et $\\theta \\, | B |$ leurs espérences vallent $\\theta \\, | C |$ et $\\theta \\, | B |$  \n",
+    "Or comme N(C) et N(B) suivent des lois de poisson de paramètres respectifs $\\theta (C)$ et $\\theta (B)$ leurs espérances vallent $\\theta (C)$ et $\\theta (B)$  \n",
     "Donc il nous reste à calculer $\\mathbb{E}(N(C)N(B))$\n",
     "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i, N(B) = n)$$\n",
     "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}\\sum_{i=0}^{\\inf}ni\\mathbb{P}(N(C) = i| N(B) = n)\\mathbb{P}(N(B)=n)$$\n",
-    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}n\\mathbb{P}(N(B)=n)\\sum_{i=0}^{n}i{ n \\choose i } \\left( \\frac{ | C | }{ | B | } \\right)^i \n",
-    "\\, \\left( 1 - \\frac{ | C | }{ | B | } \\right)^{n - i}$$\n",
-    "car on s'est ramené au cas de la question 2, on reconnait pour la seconde somme l'espérance d'une loi de Binomiale de paramètre $(n,\\frac{ | C | }{ | B | })$ d'ou:\n",
-    "$$\\mathbb{E}(N(C)N(B))=\\frac{ | C | }{ | B | }*\\sum_{n=0}^{\\inf}n^2\\exp \\bigl( - \\theta | B | \\bigr) \\frac{\n",
-    "        \\bigl( \\theta | B | \\bigr)^n }{n!}$$\n",
-    "On reconnait ici la variance + l'espérance au carrée d'une loi de Poisson de paramètre $\\theta \\, | B |$ qui vaut $\\theta \\, | B |+(\\theta \\, | B |)^2$ \n",
-    "Ainsi $\\mathbb{E}(N(C)N(B))=\\theta| C |(1+\\theta|B|)$ \n",
+    "$$\\mathbb{E}(N(C)N(B))=\\sum_{n=0}^{\\inf}n\\mathbb{P}(N(B)=n)\\sum_{i=0}^{n}i{ n \\choose i } \\left( f_{B}(C) \\right)^i \n",
+    "\\, \\left( 1 - f_{B}(C) \\right)^{n - i}$$\n",
+    "car on s'est ramené au cas de la question 1, avec $f_{B}(x) = \\frac{\\theta(x)}{\\theta(B)}$\n",
+    "\n",
+    "On reconnait pour la seconde somme l'espérance d'une loi de Binomiale de paramètre $(n,f_{B}(C))$ d'où:\n",
+    "$$\\mathbb{E}(N(C)N(B))=f_{B}(C)*\\sum_{n=0}^{\\inf}n^2 e^{- \\theta(B)} \\frac{\\theta(B)^n }{n!}$$\n",
+    "\n",
+    "On reconnait ici la variance + l'espérance au carrée d'une loi de Poisson de paramètre $\\theta(B)$ qui vaut $\\theta(B)^2+\\theta (B)$ \n",
+    "Ainsi $\\mathbb{E}(N(C)N(B))=f_{B}(C)\\theta(B)(1+\\theta(B)) = \\theta(C) (1 + \\theta(B))$ \n",
     "D'où:\n",
-    "$$\\mathrm{Cov}(N(A),N(B))=\\theta| C |(1+\\theta|B|)-\\theta| C |\\theta| B |$$\n",
-    "$$=\\theta| C |$$\n",
-    "$$=\\theta| A\\cap B |$$"
+    "$$\\mathrm{Cov}(N(A),N(B))=\\theta(C)(1+\\theta(B))-\\theta(C)\\theta(B)$$\n",
+    "$$=\\theta(C)$$\n",
+    "$$=\\theta(A\\cap B)$$"
    ]
   },
   {
