--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -414,6 +414,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse 6** : Pour que le nombre moyen d'arbres dans $D = [0,100]\\times [0,100]$ (de surface S) soit le même entre les 2 lois, il faut que les paramètres soient les mêmes (car les 2 lois suivent des lois de Poisson). On veut donc (avec $\\theta_0 = 0,05$) $$\\theta_0 S = \\int_S \\alpha (f_max - f(x)) dx$$\n",
+    "$$\\alpha = \\frac{\\theta_0 S}{\\int_S (f_max - f(x)) dx}$$\n",
+    "On peut donc calculer alpha à l'aide du programme suivant et ainsi modéliser les points où il y a des arbres :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
