--- a/projetproba.ipynb
+++ b/projetproba.ipynb
@@ -419,8 +419,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alpha = #à déterminer\n",
+    "\n",
     "def theta(x):\n",
-    "    return \n",
+    "    fmax=10**4*multivariate_normal.pdf([30,70], mean=[30,70], cov=[[150,-30],[-30,100]])\n",
+    "    f=topo(x)\n",
+    "    return alpha*(fmax-f)\n",
     "\n",
     "# Rejection sampling for theta\n",
     "def rtheta(n, a, b):\n",
